...
        super.viewDidLoad()
        
        webView.navigationDelegate = self
        alertPresenter = AlertPresenter(delagate: self)
        presenter?.viewDidLoad()
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
    }
    
    @IBAction private func didTapBackButton(_ sender: Any?) {
        delegate?.webViewViewControllerDidCancel(self)
    }
}
...
